kubeflow/common/iap-ingress/build/networking.k8s.io_v1beta1_ingress_envoy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: kubeflow-ip
    networking.gke.io/managed-certificates: gke-certificate
  labels:
    kustomize.component: iap-ingress
  name: envoy-ingress
  namespace: istio-system
spec:
  backend:
    serviceName: istio-ingressgateway
    servicePort: 80
  rules:
  - host: kubeflow.endpoints.xiyue-kfp.cloud.goog
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
